src/test/fail/basic_syntax/bad_close_token.lly
#[
SyntaxError: Expected closing token ')', not ']'.
Where: File "bad_close_token.lly" at line 6
]#

print("test.\\n"]
